--- a/README
+++ b/README
@@ -3,3 +3,9 @@ an application of news reader developed by scala and playFramework
 --------------------------------
 2016.7.23 first push into github
 news list, news detail,comments, recomment news, person center
+
+新闻聚合呈现系统，采用scala语言和Play框架开发
+![列表页和详情页](https://raw.githubusercontent.com/springlustre/image/master/github/pinglun.png)
+![搜索页](https://raw.githubusercontent.com/springlustre/image/master/github/sousuo.png)
+![系统设计](https://raw.githubusercontent.com/springlustre/image/master/github/5.1.2.png)
+ 
